apply plugin: "java"
apply plugin: "jacoco"
sourceSets.main.java.srcDirs = ["src/main/java"]

ext {
    minieVersion = '7.4.0'
    lombokVersion = '1.18.46'
    simMathVersion = '1.6.0'
    sio2Version = '1.7.0'
    blocksVersion = "1.6.4"
    protobufVersion = '4.35.0'
    jacksonVersion = '2.22.0'
    lemurprotoVersion = "1.13.0"
    logbackVersion = '1.5.34'
    mockitoVersion = '5.23.0'
    junitVersion = '6.1.0'
}

dependencies {

    // physics
    implementation "com.github.stephengold:Minie:${minieVersion}"

    // utilities
    //noinspection AnnotationProcessorOnCompilePath
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}"
    implementation "com.simsilica:sim-math:${simMathVersion}"
    implementation "com.simsilica:lemur-proto:${lemurprotoVersion}"

    // logging
    implementation "ch.qos.logback:logback-core:${logbackVersion}"
    implementation "ch.qos.logback:logback-classic:${logbackVersion}"
    implementation 'org.slf4j:jul-to-slf4j:2.0.18'

    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    // Gradle 9 no longer puts the JUnit Platform launcher on the test runtime classpath automatically.
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junitVersion}"
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

// Keep authoring/source art (GIMP, Inkscape, Blender, model sources, backups) in version
// control next to their runtime outputs, but exclude it from the packaged jar/APK -- none of
// these are loaded at runtime (jME uses the .png / .j3o forms). Trims ~2.4 MB off the build,
// which matters for the Android target.
processResources {
    exclude '**/*.xcf'      // GIMP sources -> .png
    exclude '**/*.svg'      // Inkscape sources -> .png
    exclude '**/*.blend'    // Blender sources -> .j3o
    exclude '**/*.blend1'   // Blender auto-backups
    exclude '**/*.obj'      // model sources -> .j3o
    exclude '**/*.mtl'      // model sources -> .j3o
    exclude '**/*.bak'      // backups
}